--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@angular/platform-browser-dynamic": "~17.1.0",
     "@angular/router": "~17.1.0",
     "@nx/angular": "18.0.3",
+    "axios": "^1.6.0",
     "express": "^4.18.1",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
@@ -37,9 +38,13 @@
     "@nx/express": "^18.0.3",
     "@nx/jest": "18.0.3",
     "@nx/js": "18.0.3",
+    "@nx/node": "18.0.3",
     "@nx/web": "18.0.3",
+    "@nx/webpack": "18.0.3",
     "@nx/workspace": "18.0.3",
+    "@pmmmwh/react-refresh-webpack-plugin": "^0.5.7",
     "@schematics/angular": "~17.1.0",
+    "@svgr/webpack": "^8.0.1",
     "@swc-node/register": "~1.6.7",
     "@swc/core": "~1.3.85",
     "@swc/helpers": "~0.5.2",
@@ -54,12 +59,16 @@
     "husky": "^9.0.10",
     "jest": "^29.4.1",
     "jest-environment-jsdom": "^29.4.1",
+    "jest-environment-node": "^29.4.1",
     "jest-preset-angular": "~13.1.4",
     "jsonc-eslint-parser": "^2.1.0",
     "nx": "18.0.3",
     "prettier": "^2.6.2",
+    "react-refresh": "^0.10.0",
     "ts-jest": "^29.1.0",
     "ts-node": "10.9.1",
-    "typescript": "~5.3.2"
+    "typescript": "~5.3.2",
+    "url-loader": "^4.1.1",
+    "webpack-cli": "^5.1.4"
   }
 }
