--- a/package.json
+++ b/package.json
@@ -18,6 +18,8 @@
     "@nx/angular": "18.0.3",
     "axios": "^1.6.0",
     "express": "^4.18.1",
+    "react": "18.2.0",
+    "react-dom": "18.2.0",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.14.3"
@@ -39,6 +41,7 @@
     "@nx/jest": "18.0.3",
     "@nx/js": "18.0.3",
     "@nx/node": "18.0.3",
+    "@nx/react": "^18.0.3",
     "@nx/web": "18.0.3",
     "@nx/webpack": "18.0.3",
     "@nx/workspace": "18.0.3",
