--- a/package.json
+++ b/package.json
@@ -34,31 +34,46 @@
     "@angular/cli": "~17.1.0",
     "@angular/compiler-cli": "~17.1.0",
     "@angular/language-service": "~17.1.0",
+    "@babel/core": "^7.14.5",
+    "@babel/preset-react": "^7.14.5",
     "@nx/cypress": "18.0.3",
+    "@nx/devkit": "18.0.3",
     "@nx/eslint": "18.0.3",
     "@nx/eslint-plugin": "18.0.3",
     "@nx/express": "^18.0.3",
     "@nx/jest": "18.0.3",
     "@nx/js": "18.0.3",
     "@nx/node": "18.0.3",
+    "@nx/playwright": "18.0.3",
     "@nx/react": "^18.0.3",
     "@nx/web": "18.0.3",
     "@nx/webpack": "18.0.3",
     "@nx/workspace": "18.0.3",
+    "@playwright/test": "^1.36.0",
     "@pmmmwh/react-refresh-webpack-plugin": "^0.5.7",
     "@schematics/angular": "~17.1.0",
     "@svgr/webpack": "^8.0.1",
     "@swc-node/register": "~1.6.7",
+    "@swc/cli": "~0.1.62",
     "@swc/core": "~1.3.85",
     "@swc/helpers": "~0.5.2",
+    "@testing-library/react": "14.0.0",
     "@types/jest": "^29.4.0",
     "@types/node": "18.16.9",
+    "@types/react": "18.2.33",
+    "@types/react-dom": "18.2.14",
     "@typescript-eslint/eslint-plugin": "^6.13.2",
     "@typescript-eslint/parser": "^6.13.2",
+    "babel-jest": "^29.4.1",
     "cypress": "^13.0.0",
     "eslint": "~8.48.0",
     "eslint-config-prettier": "^9.0.0",
     "eslint-plugin-cypress": "^2.13.4",
+    "eslint-plugin-import": "2.27.5",
+    "eslint-plugin-jsx-a11y": "6.7.1",
+    "eslint-plugin-playwright": "^0.15.3",
+    "eslint-plugin-react": "7.32.2",
+    "eslint-plugin-react-hooks": "4.6.0",
     "husky": "^9.0.10",
     "jest": "^29.4.1",
     "jest-environment-jsdom": "^29.4.1",
