--- a/package.json
+++ b/package.json
@@ -83,6 +83,7 @@
     "nx": "18.0.3",
     "prettier": "^2.6.2",
     "react-refresh": "^0.10.0",
+    "start-server-and-test": "2.0.3",
     "ts-jest": "^29.1.0",
     "ts-node": "10.9.1",
     "typescript": "~5.3.2",
