--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
     "@angular/platform-browser": "~17.1.0",
     "@angular/platform-browser-dynamic": "~17.1.0",
     "@angular/router": "~17.1.0",
-    "@nx/angular": "18.0.3",
+    "@nx/angular": "18.0.4",
     "axios": "^1.6.0",
     "express": "^4.18.1",
     "react": "18.2.0",
@@ -36,24 +36,24 @@
     "@angular/language-service": "~17.1.0",
     "@babel/core": "^7.14.5",
     "@babel/preset-react": "^7.14.5",
-    "@nx/cypress": "18.0.3",
-    "@nx/devkit": "18.0.3",
-    "@nx/eslint": "18.0.3",
-    "@nx/eslint-plugin": "18.0.3",
-    "@nx/express": "^18.0.3",
-    "@nx/jest": "18.0.3",
-    "@nx/js": "18.0.3",
-    "@nx/node": "18.0.3",
-    "@nx/playwright": "18.0.3",
-    "@nx/react": "^18.0.3",
-    "@nx/web": "18.0.3",
-    "@nx/webpack": "18.0.3",
-    "@nx/workspace": "18.0.3",
+    "@nx/cypress": "18.0.4",
+    "@nx/devkit": "18.0.4",
+    "@nx/eslint": "18.0.4",
+    "@nx/eslint-plugin": "18.0.4",
+    "@nx/express": "18.0.4",
+    "@nx/jest": "18.0.4",
+    "@nx/js": "18.0.4",
+    "@nx/node": "18.0.4",
+    "@nx/playwright": "18.0.4",
+    "@nx/react": "18.0.4",
+    "@nx/web": "18.0.4",
+    "@nx/webpack": "18.0.4",
+    "@nx/workspace": "18.0.4",
     "@playwright/test": "^1.36.0",
     "@pmmmwh/react-refresh-webpack-plugin": "^0.5.7",
     "@schematics/angular": "~17.1.0",
     "@svgr/webpack": "^8.0.1",
-    "@swc-node/register": "~1.6.7",
+    "@swc-node/register": "1.8.0",
     "@swc/cli": "~0.1.62",
     "@swc/core": "~1.3.85",
     "@swc/helpers": "~0.5.2",
@@ -80,7 +80,7 @@
     "jest-environment-node": "^29.4.1",
     "jest-preset-angular": "~13.1.4",
     "jsonc-eslint-parser": "^2.1.0",
-    "nx": "18.0.3",
+    "nx": "18.0.4",
     "prettier": "^2.6.2",
     "react-refresh": "^0.10.0",
     "start-server-and-test": "2.0.3",
@@ -91,3 +91,4 @@
     "webpack-cli": "^5.1.4"
   }
 }
+
