--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "@angular/cli": "~17.1.0",
     "@angular/compiler-cli": "~17.1.0",
     "@angular/language-service": "~17.1.0",
+    "@angular/material": "^17.1.2",
     "@babel/core": "^7.14.5",
     "@babel/preset-react": "^7.14.5",
     "@nx/cypress": "18.0.4",
