--- a/apps/angular/e-commerce/e-commerce/project.json
+++ b/apps/angular/e-commerce/e-commerce/project.json
@@ -4,24 +4,16 @@
   "projectType": "application",
   "prefix": "expnx",
   "sourceRoot": "apps/angular/e-commerce/e-commerce/src",
-  "tags": [
-    "type:app",
-    "scope:e-commerce",
-    "framework:angular"
-  ],
+  "tags": ["type:app", "scope:e-commerce", "framework:angular"],
   "targets": {
     "build": {
       "executor": "@angular-devkit/build-angular:browser",
-      "outputs": [
-        "{options.outputPath}"
-      ],
+      "outputs": ["{options.outputPath}"],
       "options": {
         "outputPath": "dist/apps/angular/e-commerce/e-commerce",
         "index": "apps/angular/e-commerce/e-commerce/src/index.html",
         "main": "apps/angular/e-commerce/e-commerce/src/main.ts",
-        "polyfills": [
-          "zone.js"
-        ],
+        "polyfills": ["zone.js"],
         "tsConfig": "apps/angular/e-commerce/e-commerce/tsconfig.app.json",
         "inlineStyleLanguage": "scss",
         "assets": [
