--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@angular/platform-browser": "~17.1.0",
     "@angular/platform-browser-dynamic": "~17.1.0",
     "@angular/router": "~17.1.0",
+    "@ngrx/effects": "^17.1.0",
     "@ngrx/store": "^17.1.0",
     "@nx/angular": "18.0.4",
     "axios": "^1.6.0",
