--- a/package.json
+++ b/package.json
@@ -26,7 +26,8 @@
     "react-dom": "18.2.0",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
-    "zone.js": "~0.14.3"
+    "zone.js": "~0.14.3",
+    "@ngrx/store-devtools": "^17.1.0"
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "~17.1.0",
@@ -41,6 +42,7 @@
     "@angular/material": "^17.1.2",
     "@babel/core": "^7.14.5",
     "@babel/preset-react": "^7.14.5",
+    "@ngrx/store-devtools": "^17.1.0",
     "@nx/cypress": "18.0.4",
     "@nx/devkit": "18.0.4",
     "@nx/eslint": "18.0.4",
