--- a/tsconfig.base.json
+++ b/tsconfig.base.json
@@ -21,6 +21,9 @@
       "@expnx/angular/e-commerce/data-access/category": [
         "libs/angular/e-commerce/data-access/category/src/index.ts"
       ],
+      "@expnx/angular/e-commerce/feature/cart": [
+        "libs/angular/e-commerce/feature/cart/src/index.ts"
+      ],
       "@expnx/angular/e-commerce/feature/home": [
         "libs/angular/e-commerce/feature/home/src/index.ts"
       ],
