--- a/package.json
+++ b/package.json
@@ -92,7 +92,7 @@
     "nx": "18.0.4",
     "postcss": "^8.4.5",
     "postcss-url": "~10.1.3",
-    "prettier": "^2.6.2",
+    "prettier": "3.2.5",
     "react-refresh": "^0.10.0",
     "start-server-and-test": "2.0.3",
     "ts-jest": "^29.1.0",
