--- a/libs/angular/e-commerce/feature/user/package.json
+++ b/libs/angular/e-commerce/feature/user/package.json
@@ -3,10 +3,11 @@
   "version": "0.0.1",
   "peerDependencies": {
     "@angular/common": "^17.1.0",
-    "@angular/core": "^17.1.0"
+    "@angular/core": "^17.1.0",
+    "@angular/router": "~17.1.0",
+    "@angular/forms": "~17.1.0",
+    "@angular/material": "^17.1.2"
   },
-  "dependencies": {
-    "tslib": "^2.3.0"
-  },
+  "dependencies": {},
   "sideEffects": false
 }
