--- a/package.json
+++ b/package.json
@@ -19,6 +19,8 @@
     "@angular/router": "~17.1.0",
     "@ngrx/effects": "^17.1.0",
     "@ngrx/store": "^17.1.0",
+    "@ngrx/store-devtools": "^17.1.0",
+    "@nrwl/nx-cloud": "^18.0.0",
     "@nx/angular": "18.0.4",
     "axios": "^1.6.0",
     "express": "^4.18.1",
@@ -26,8 +28,7 @@
     "react-dom": "18.2.0",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
-    "zone.js": "~0.14.3",
-    "@ngrx/store-devtools": "^17.1.0"
+    "zone.js": "~0.14.3"
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "~17.1.0",
