feat: Add @nxrocks/nx-spring-boot package

--- a/package.json
+++ b/package.json
@@ -58,6 +58,7 @@
     "@nx/web": "18.0.4",
     "@nx/webpack": "18.0.4",
     "@nx/workspace": "18.0.4",
+    "@nxrocks/nx-spring-boot": "^9.2.2",
     "@playwright/test": "^1.36.0",
     "@pmmmwh/react-refresh-webpack-plugin": "^0.5.7",
     "@schematics/angular": "~17.1.0",
