--- a/package.json
+++ b/package.json
@@ -54,6 +54,7 @@
     "@nx/js": "18.0.4",
     "@nx/node": "18.0.4",
     "@nx/playwright": "18.0.4",
+    "@nx/plugin": "^18.0.4",
     "@nx/react": "18.0.4",
     "@nx/web": "18.0.4",
     "@nx/webpack": "18.0.4",
