chore: Update nx dependencies

--- a/nx.json
+++ b/nx.json
@@ -42,6 +42,11 @@
     },
     "install": {
       "cache": true
+    },
+    "@nx/js:tsc": {
+      "cache": true,
+      "dependsOn": ["^build"],
+      "inputs": ["production", "^production"]
     }
   },
   "plugins": [
