--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
     "@ngrx/effects": "^17.1.0",
     "@ngrx/store": "^17.1.0",
     "@ngrx/store-devtools": "^17.1.0",
-    "@nrwl/nx-cloud": "^18.0.0",
+    "@nrwl/nx-cloud": "^16.0.4",
     "@nx/angular": "18.0.4",
     "axios": "^1.6.0",
     "express": "^4.18.1",
@@ -31,7 +31,7 @@
     "zone.js": "~0.14.3"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "~17.1.0",
+    "@angular-devkit/build-angular": "^17.2.0",
     "@angular-devkit/core": "~17.1.0",
     "@angular-devkit/schematics": "~17.1.0",
     "@angular-eslint/eslint-plugin": "~17.0.0",
@@ -54,7 +54,7 @@
     "@nx/js": "18.0.4",
     "@nx/node": "18.0.4",
     "@nx/playwright": "18.0.4",
-    "@nx/plugin": "^18.0.4",
+    "@nx/plugin": "18.0.4",
     "@nx/react": "18.0.4",
     "@nx/web": "18.0.4",
     "@nx/webpack": "18.0.4",
