--- a/package.json
+++ b/package.json
@@ -8,12 +8,12 @@
   "private": true,
   "dependencies": {
     "@angular/animations": "~17.1.0",
-    "@angular/cdk": "~17.1.2",
+    "@angular/cdk": "17.2.0",
     "@angular/common": "~17.1.0",
     "@angular/compiler": "~17.1.0",
     "@angular/core": "~17.1.0",
     "@angular/forms": "~17.1.0",
-    "@angular/material": "~17.1.2",
+    "@angular/material": "^17.1.2",
     "@angular/platform-browser": "~17.1.0",
     "@angular/platform-browser-dynamic": "~17.1.0",
     "@angular/router": "~17.1.0",
@@ -59,7 +59,7 @@
     "@nx/web": "18.0.4",
     "@nx/webpack": "18.0.4",
     "@nx/workspace": "18.0.4",
-    "@nxrocks/nx-spring-boot": "^9.2.2",
+    "@nxrocks/nx-spring-boot": "^9.3.0",
     "@playwright/test": "^1.36.0",
     "@pmmmwh/react-refresh-webpack-plugin": "^0.5.7",
     "@schematics/angular": "~17.1.0",
