chore: Update target names for sb-app-1

--- a/apps/spring-boot/sb-app-1/project.json
+++ b/apps/spring-boot/sb-app-1/project.json
@@ -20,7 +20,8 @@
       "dependsOn": ["^install"],
       "outputs": ["{workspaceRoot}/apps/spring-boot/sb-app-1/build"]
     },
-    "test": {
+    "java-test": {
+      "cache": true,
       "executor": "@nxrocks/nx-spring-boot:test",
       "options": {
         "root": "apps/spring-boot/sb-app-1"
@@ -55,6 +56,7 @@
       "outputs": ["{workspaceRoot}/apps/spring-boot/sb-app-1/build"]
     },
     "lint": {
+      "cache": true,
       "command": "echo Ignored in project configuration"
     }
   },
