--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -32,6 +32,8 @@ jobs:
 
       # - run: npx nx-cloud record -- nx format:check
       - run: sudo apt-get install libgtk2.0-0 libgtk-3-0 libgbm-dev libnotify-dev libnss3 libxss1 libasound2 libxtst6 xauth xvfb
-      - run: npx nx affected -t lint test build
+      - run: npx nx affected -t lint
+      - run: npx nx affected -t test
+      - run: npx nx affected -t build
       # Disabled for now due to issues with github actionsgit
       # - run: npx nx affected -t e2e-ci
