--- a/libs/angular/e-commerce/feature/product/package.json
+++ b/libs/angular/e-commerce/feature/product/package.json
@@ -6,6 +6,7 @@
     "@angular/core": "^17.1.0",
     "@ngrx/store": "^17.1.0",
     "@ngrx/effects": "^17.1.0",
+    "@angular/material": "^17.2.0",
     "rxjs": "~7.8.0"
   },
   "dependencies": {},
