--- a/package.json
+++ b/package.json
@@ -44,7 +44,7 @@
     "@babel/core": "^7.14.5",
     "@babel/preset-react": "^7.14.5",
     "@ngrx/store-devtools": "^17.1.0",
-    "@nx-go/nx-go": "^2.8.0",
+    "@nx-go/nx-go": "^3.0.0-beta.0",
     "@nx/cypress": "18.0.4",
     "@nx/devkit": "18.0.4",
     "@nx/eslint": "18.0.4",
